2006-03-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	* gnulib.modules: Add obstack
	* rmt/rmt.c (get_string): Renamed to get_string_n. All callers
	changed.
	(get_string,free_string,i18n_setup): New function.
	(usage): Call i18n_setup
	(open_device): Use new get_string function to remove the
	limitation on the device name length.
	* tests/genfile.c: Properly initialize i18n.

2006-03-07  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.ac (AC_CHECK_HEADERS): Don't check for sys/time.h,
	since we no longer use HAVE_SYS_TIME_H.
	(AC_CHECK_DECLS): Don't check for 'time', since we assume
	C89 or better.
	* lib/system.h: Include <unistd.h> unconditionally, since we now
	assume the unistd module.
	(time): Remove decl; not needed, since we assume C89 or better.
	Don't bother checking for HAVE_SYS_TIME_H when deciding whether
	to include <sys/time.h>, since TIME_WITH_SYS_TIME implies sys/time.h
	exists.
	(HAVE_DECL_VALLOC) [WITH_DMALLOC]: Remove #undef, since this symbol
	is no longer used.

	* m4/system.m4 (PU_SYSTEM): Don't check for unistd.h or sys/time.h,
	or for time or valloc.

2006-02-20  Sergey Poznyakoff  <gray@gnu.org.ua>

	* m4/system.m4: Remove sys/buf.h from AC_CHECK_HEADERS_ONCE, check
	for it separately (needs sys/param.h on some systems).

2006-02-20  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/DISTFILES: Add system-ioctl.h.
	* lib/system.h: Move the MTIO* stuff into....
	* lib/system-ioctl.h: New file.  That way, the symbols defined
	by these includes won't collide with the symbols defined by
	<sys/filio.h> on Solaris when compiling misc.c.
	* lib/rtapelib.c: Include system-ioctl.h.
	* paxlib/rtape.c: Likewise.
	* rmt/rmt.c: Likewise.

2006-02-07  Paul Eggert  <eggert@cs.ucla.edu>

	* gnulib.modules: Add closeout.
	* rmt/rmt.c: Include closeout.h.
	(main, usage): Use close_stdout to report write errors properly.

	* gnulib.modules: Add version-etc-fsf.
	* rmt/rmt.c: Include <version-etc.h>.
	(main): Use version_etc rather than rolling our own.
